Use NIO to download plugin updates